--- a/app/src/main/res/layout/activity_mostrar_lista.xml
+++ b/app/src/main/res/layout/activity_mostrar_lista.xml
@@ -2,8 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#E1E2E1"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/tvNumPokedex"
@@ -12,7 +14,7 @@
         android:text='Numero "x" de la pokedex' />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imgPokemon"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:srcCompat="@mipmap/ic_launcher_round" />
@@ -21,7 +23,8 @@
         android:id="@+id/tvNombre"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Nombre del pokemon" />
+        android:text="Nombre del pokemon"
+        android:textAlignment="center" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -33,13 +36,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Tipo 1" />
+            android:text="Tipo 1"
+            android:textAlignment="center" />
 
         <TextView
             android:id="@+id/tvTipo2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Tipo 2" />
+            android:text="Tipo 2"
+            android:textAlignment="center" />
     </LinearLayout>
 </LinearLayout>
