Part visual FINISHED, a no ser que tingui alguna idea més andevant jeje

--- a/app/src/main/res/layout/activity_mostrar_lista.xml
+++ b/app/src/main/res/layout/activity_mostrar_lista.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#F5F5F6"
+    android:background="#FFFFFF"
     android:orientation="horizontal">
 
     <TextView
