--- a/app/src/main/res/layout/activity_lista_principal.xml
+++ b/app/src/main/res/layout/activity_lista_principal.xml
@@ -1,20 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_albaranes"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#E1E2E1"
-    android:orientation="vertical"
-    tools:context=".ListPrincipal">
+    android:background="#D63031"
+    tools:context=".MainActivity">
 
-    <ListView
-        android:id="@+id/listCustom"
-        android:layout_width="397dp"
-        android:layout_height="638dp"
-        android:background="#E1E2E1"
-        android:divider="@android:color/transparent"
-        android:dividerHeight="10.0sp" />
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.01" />
 
-</LinearLayout>
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.98" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.02" />
+
+    <LinearLayout
+        android:id="@+id/activity_albaranes"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="#D63031"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline9"
+        app:layout_constraintStart_toStartOf="@+id/guideline8"
+        app:layout_constraintTop_toTopOf="@+id/guideline10"
+        tools:context=".ListPrincipal">
+
+        <ListView
+            android:id="@+id/listCustom"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#D63031"
+            android:divider="@android:color/transparent"
+            android:dividerHeight="8.0sp">
+
+        </ListView>
+    </LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
