no se que posar jaja xd salu2

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="colorPrimary2">#73c457</color>
     <color name="colorPrimaryDark2">#409328</color>
     <color name="colorAccent2">#a6f786</color>
+
+    <color name="borderColor">#000000</color>
 </resources>
