--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -364,7 +364,7 @@
                             app:layout_constraintGuide_percent="0.92" />
 
                         <TextView
-                            android:id="@+id/textView5"
+                            android:id="@+id/tvNombre"
                             android:layout_width="0dp"
                             android:layout_height="0dp"
                             android:background="@drawable/border_top_left_bot"
