--- a/app/src/main/res/menu/menu_actionbar_listprincipal.xml
+++ b/app/src/main/res/menu/menu_actionbar_listprincipal.xml
@@ -2,7 +2,7 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/game"
+        android:id="@+id/GAME"
         android:icon="@drawable/game"
         android:title="GAME"
         app:showAsAction="ifRoom"></item>
