--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -369,6 +369,7 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:text="CONFIRMAR"
+                app:backgroundTint="@color/colorPrimary2"
                 app:layout_constraintBottom_toTopOf="@+id/guideline22"
                 app:layout_constraintEnd_toStartOf="@+id/guideline16"
                 app:layout_constraintStart_toStartOf="@+id/guideline30"
